[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
authors = ["Yuki Yamaura <ymruki@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A library for sequence processing in Rust."
homepage = "https://github.com/yamaura/phargs"
repository = "https://github.com/yamaura/phargs"

[workspace.metadata.release]
push = false
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "Bump version to {{version}}"
tag-message = "{{tag_name}}"

[workspace.metadata.docs.rs]
all-features = true

[workspace.dependencies]
regex = "1"
serde = { version = "1.0.203" }
thiserror = "1"
