[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
authors = ["Yuki Yamaura <ymruki@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A Rust library providing procedural macros for regex-based parsing and validation of custom data types."
homepage = "https://github.com/yamaura/regex_with"
repository = "https://github.com/yamaura/regex_with"

[workspace.metadata.release]
push = false
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "Bump version to {{version}}"
tag-message = "{{tag_name}}"

[workspace.metadata.docs.rs]
all-features = true

[workspace.dependencies]
regex = "1"
serde = { version = "1.0.203" }
thiserror = "1"
